update virtual keyboard table name

--- a/autoload/yavimim/data/vk.conf
+++ b/autoload/yavimim/data/vk.conf
@@ -1,57 +1,7 @@
 #Format: Key=Character Shift-Character
 
 [VK]
-NAME=Latin
-`=` ~
-1=1 !
-2=2 @
-3=3 #
-4=4 $
-5=5 %
-6=6 ^
-7=7 &
-8=8 *
-9=9 (
-0=0 )
--=- _
-=== +
-q=q Q
-w=w W
-e=e E
-r=r R
-t=t T
-y=y Y
-u=u U
-i=i I
-o=o O
-p=p P
-[=[ {
-]=] }
-a=a A
-s=s S
-d=d D
-f=f F
-g=g G
-h=h H
-j=j J
-k=k K
-l=l L
-;=; :
-'=' "
-\=\ |
-z=z Z
-x=x X
-c=c C
-v=v V
-b=b B
-n=n N
-m=m M
-,=, <
-.=. >
-/=/ ?
-
-[VK]
-NAME=Fullwidth
+NAME=全角字符
 `=｀ ￣
 1=１ ！
 2=２ ＠
@@ -101,7 +51,7 @@ m=ｍ Ｍ
 /=／ ？
 
 [VK]
-NAME=Greek
+NAME=希腊字母
 w=ς Σ
 e=ε Ε
 r=ρ Ρ
@@ -129,7 +79,7 @@ n=ν Ν
 m=μ Μ
 
 [VK]
-NAME=Russian
+NAME=俄文字母
 q=й Ц
 w=ц Ц
 e=у У
@@ -166,7 +116,7 @@ m=ь Ь
 3=3 №
 
 [VK]
-NAME=Index
+NAME=数字序号
 1=Ⅰ
 2=Ⅱ
 3=Ⅲ
@@ -211,7 +161,7 @@ m=⑺ ⒄
 /=⑽ ⒇
 
 [VK]
-NAME=Math
+NAME=数学符号
 `=≈
 1=≡
 2=≠
@@ -252,7 +202,7 @@ m=∽
 .=√
 
 [VK]
-NAME=Number
+NAME=单位符号
 1=°
 2=′
 3=″
@@ -289,7 +239,7 @@ c=毫
 v=微
 
 [VK]
-NAME=Special
+NAME=特殊符号
 q=§
 w=№
 e=☆
@@ -320,7 +270,7 @@ m=￣
 .=℃
 
 [VK]
-NAME=Hiragana
+NAME=日文平假名
 `=ぁ あ
 1=ぃ い
 2=ぅ う
@@ -370,7 +320,7 @@ m=ゅ ゆ
 /=を ?
 
 [VK]
-NAME=Katakana
+NAME=日文片假名
 `=ァ ア
 1=ィ イ
 2=ゥ ウ
@@ -420,7 +370,7 @@ m=ュ ユ
 /=ヲ ?
 
 [VK]
-NAME=Table Symbol
+NAME=制表符
 `=┌ └
 1=┍ ┕
 2=┎ ┖
