added punctations for virtual keyboard

--- a/autoload/yavimim/data/vk.conf
+++ b/autoload/yavimim/data/vk.conf
@@ -270,7 +270,57 @@ m=￣
 .=℃
 
 [VK]
-NAME=日文平假名
+NAME=标点符号
+`=。
+1=，
+2=、
+3=；
+4=：
+5=？
+6=！
+7=…
+8=—
+9=·
+0=ˉ
+-=ˇ
+==¨
+q=‘
+w=’
+e=“
+r=”
+t=々
+y=～
+u=‖
+i=∶
+o=＂
+p=＇
+[=｀
+]=｜
+\=〃
+a=〔
+s=〕
+d=〈
+f=〉
+g=《
+h=》
+j=「
+k=」
+l=『
+;=』
+'=．
+z=〖
+x=〗
+c=【
+v=】
+b=（
+n=）
+m=［
+,=］
+.=｛
+/=｝
+
+[VK]
+NAME=平假名
 `=ぁ あ
 1=ぃ い
 2=ぅ う
@@ -320,7 +370,7 @@ m=ゅ ゆ
 /=を ?
 
 [VK]
-NAME=日文片假名
+NAME=片假名
 `=ァ ア
 1=ィ イ
 2=ゥ ウ
